version js and css and fix sidebar flickering on load

--- a/_sass/hydejack/_base-essential.scss
+++ b/_sass/hydejack/_base-essential.scss
@@ -7,6 +7,12 @@ body {
   padding-left: 0.5rem;
 }
 
+body, main {
+  /* Prevent side-scrolling on mobile */
+  position: relative;
+  overflow-x: hidden;
+}
+
 .shadow-main {
   opacity: 0;
   will-change: opacity;
